--- a/index.html
+++ b/index.html
@@ -8,21 +8,23 @@
 </head>
 <body>
     <main class="cards">
-        <section class="card">
+        <section class="card contact">
             <div class="icon"><img src="img/Chat.png" alt="Contact us."></div>
             <h3>Contact us.</h3>
-            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ratione et, cumque magni, recusandae laudantium sit amet earum nulla corporis impedit voluptas. Distinctio deleniti illum, nobis maxime voluptate velit at.</span>
+            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
             <button>Learn More</button>
         </section>
-        <section class="card">
+        <section class="card shop">
             <div class="icon"><img src="img/Bag.png" alt="Shop here."></div>
             <h3>Shop here</h3>
-            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ratione et, cumque magni, recusandae laudantium sit amet earum nulla corporis impedit voluptas. Distinctio deleniti illum, nobis maxime voluptate velit at.</span>
+            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
+            <button>Learn More</button>
         </section>
-        <section class="card">
+        <section class="card about">
             <div class="icon"><img src="img/Play.png" alt="About us"></div>
             <h3>About us.</h3>
-            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ratione et, cumque magni, recusandae laudantium sit amet earum nulla corporis impedit voluptas. Distinctio deleniti illum, nobis maxime voluptate velit at.</span>
+            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
+            <button>Learn More</button>
         </section>
     </main>
 </body>
